# rust-actix-rest-api-boilerplate-yang

./: .gitignore  Cargo.toml  README.md
backend/: Cargo.toml  application.yml
backend/src/: lib.rs  main.rs
backend/src/bean/: mod.rs  tables.rs
backend/src/bean/dto/: dict.rs  menu.rs  mod.rs  role.rs
backend/src/bean/vo/: dict.rs  menu.rs  mod.rs  role.rs
backend/src/config/: config.rs  error.rs  log.rs  mod.rs  mysql.rs
backend/src/controller/: mod.rs  sys_dict_controller.rs  sys_menu_controller.rs  sys_role_controller.rs  sys_user_controller.rs
backend/src/dao/: mod.rs
backend/src/service/: mod.rs  sys_dict_service.rs  sys_menu_service.rs  sys_role_service.rs  sys_user_service.rs
